--- a/styles/css.css
+++ b/styles/css.css
@@ -91,6 +91,21 @@ a.link:visited {
     text-decoration: none;
 }
 
+.nav-item>a:hover {
+    color: var(--black-nav);
+    text-decoration: none;
+}
+
+.nav-item>a:visited {
+    color: var(--black-nav);
+    text-decoration: none;
+}
+
+.nav-item>a:active {
+    color: var(--black-nav);
+    text-decoration: none;
+}
+
 #contact-us>a:link {
     color: var(--dark-blue-fg);
     text-decoration: none;
@@ -127,7 +142,7 @@ a.link:visited {
 .header-cards-wrapper {
     display: flex;
     flex-direction: column;
-    margin: 9% 6% 2% 7%;
+    margin: 9% 6% 2% 1%;
 }
 
 .header-card {
@@ -137,7 +152,8 @@ a.link:visited {
 .caption-paragraph {
     font: normal normal bold 48px "Graphik Regular", sans-serif;
     color: var(--white-text);
-    flex-basis: 50%
+    flex-basis: 50%;
+    line-height: 70px;
 }
 
 .header-caption {
@@ -155,6 +171,7 @@ a.link:visited {
 }
 
 section>header>div>h1::after {
+    margin-top: 8px;
     background-color: var(--yellow);
     display: block;
     height: 5px;
@@ -180,7 +197,7 @@ section>header>div>h1 {
 .why-choose-us-article {
     display: flex;
     justify-content: center;
-    margin: 1% 14%;
+    margin: 1% 6%;
     padding: 0% 0% 11% 0%;
 }
 
@@ -190,6 +207,10 @@ section>header>div>h1 {
     border-radius: 5px;
     margin: 1%;
     padding: 1em;
+}
+
+.why-choose-us-card>p {
+    line-height: 30px;
 }
 
 .why-choose-us-card>h4 {
@@ -202,7 +223,7 @@ section>header>div>h1 {
 
 .facilities-top-flex {
     display: flex;
-    margin: 0 9%;
+    margin: 0 4%;
     padding-bottom: 9%;
 }
 
@@ -248,7 +269,7 @@ section>header>div>h1 {
 }
 
 .facilities-tour-text {
-    padding: 0 4% 0% 12%;
+    padding: 0 3% 0% 5%;
 }
 
 .facilities-tour-text>header>h1 {
@@ -295,6 +316,10 @@ section>header>div>h1 {
     padding: 2em;
 }
 
+.view-more {
+    margin: 0 5em;
+}
+
 .arc {
     position: relative;
     background: #FFFFFF;
@@ -316,9 +341,9 @@ section>header>div>h1 {
 }
 
 .testimonial {
-    margin: 0 12% 12% 12%;
+    margin: 0 11% 12% 10%;
     color: white;
-    line-height: 1.5em;
+    line-height: 27px;
 }
 
 .summer-coaching {
@@ -343,7 +368,7 @@ section>header>div>h1 {
 
 .summer-coaching-article {
     margin-left: 8em;
-    line-height: 2em;
+    line-height: 36px;
 }
 
 .summer-coaching-enroll-div {
@@ -384,7 +409,7 @@ footer {
 }
 
 .footer-list>li {
-    margin: 0em 1em 1em 0em;
+    margin: 0em 1em 2em 0em;
 }
 
 .attrib2 {
@@ -414,7 +439,6 @@ footer {
 .attribution {
     margin-top: 2em;
 }
-
 
 @media only screen and (max-width: 1000px) {
     .nav-wrapper {
@@ -449,6 +473,9 @@ footer {
         padding: 0.5em 1rem;
         border-top: solid 1px var(--background-grey);
         text-align: center;
+    }
+    .nav-list>li>a {
+        display: block;
     }
     .logo-wrapper {
         display: flex;
@@ -489,6 +516,9 @@ footer {
     .link-wrapper {
         text-align: center;
     }
+    .view-more {
+        margin: 0;
+    }
     .testimonial-image-wrapper {
         text-align: center;
     }
@@ -513,7 +543,14 @@ footer {
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 655px) {
+    :root {
+        --normal-text: normal normal normal 16px "Graphik Regular", sans-serif;
+    }
+    .caption-paragraph {
+        font: normal normal bold 22px "Graphik Regular", sans-serif;
+        line-height: 40px;
+    }
     .why-choose-us-article {
         margin: 0;
         padding: 0%;
